force-app/main/default/objects/Pardot_Message__c/Pardot_Message__c.object-meta.xml
<CustomObject>
    <description>Used to store an archive of messages from a Contact received from our website forms.</description>
    <label>Pardot Message</label>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Pardot Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pardot Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>