force-app/main/default/objects/Pardot_Message__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact Name attached to the email address this message was received from.</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Archived Pardot Messages</relationshipLabel>
    <relationshipName>Pardot_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>