force-app/main/default/objects/Pardot_Message__c/fields/Message_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Created_Date__c</fullName>
    <description>Displays the Date/Time this message was created in Salesforce, not necessarily the same as when it was received by Pardot.</description>
    <label>Message Created Date</label>
    <type>DateTime</type>
</CustomField>